qt4-x11 (4:4.6.2-6) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Sun, 06 Jun 2010 03:16:11 +0300

qt4-x11 (4:4.6.2-5) unstable; urgency=low

  [ Modestas Vainius ]
  * Update symbol files for armel, hppa and mips.
  * Add 98_alpha_ftbfs_wtf_platform_support.diff: support for alpha to QtScript
    copy of wtf/Platform.h. This change fix FTBFS on alpha.

  [ Fathi Boudra ]
  * Add upstream patches:
    - 0004_problem_displaying_half_width_character.diff (Closes: #578604)
      QTBUG-1726 - Fixed problem displaying half width character as full width.
    - 0005_always_redraw_the_complete_control.diff (Closes: #578606)
      QTBUG-8807 - Always redraw the complete control when an input event comes
      in.
    - 0006_expand_indicator_would_not_be_displayed.diff
      QTBUG-7443 - Expand indicator would not be displayed after removal of a
      collapsed item's child.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Apr 2010 23:42:13 +0300

qt4-x11 (4:4.6.2-4) unstable; urgency=low

  [ Modestas Vainius ]
  * Revert previous s390 specific change as it did not solve FTBFS.
  * Do not link webkit with -Wl,--gc-sections on s390. This should workaround
    FTBFS on s390 caused by internal linker error which is due to bugs when
    processing UString.o and some others (built with -ffunction-sections).
    Implemented in the 96_webkit_no_gc_sections.diff patch.
  * Steal patch from upstream 4.6 branch to fix s390 atomic ops related
    crashes. One of them made the package to FTBFS. Upstream commit:
    cdf4701f442149546043b155cddcc53116875f1c
  * Update symbol files for amd64, i386, ia64, kfreebsd-amd64, kfreebsd-i386,
    powerpc, s390, sparc.
  * Release to unstable (Closes: #571990). Finally!

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 14 Apr 2010 20:56:19 +0300

qt4-x11 (4:4.6.2-3) experimental; urgency=low

  [ Sune Vuorela ]